--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -331,6 +331,7 @@ h1, h2, h3, h4, h5, h6 {
     flex-direction: column;
     gap: 1rem;
     align-items: center;
+    justify-content: center;
     margin-bottom: 3rem;
 }
 
@@ -373,6 +374,7 @@ h1, h2, h3, h4, h5, h6 {
     
     .hero-actions {
         flex-direction: row;
+        justify-content: center;
     }
 }
 
