--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,17 +6,23 @@ layout: default
     <div class="container">
         <div class="project-header">
             <div class="project-meta">
-                <span class="project-domain {{ page.domain_slug }}">{{ page.domain }}</span>
+                {% if page.domains %}
+                    {% for domain in page.domains %}
+                    <span class="project-domain {{ domain.slug }}">{{ domain.name }}</span>
+                    {% endfor %}
+                {% elsif page.domain %}
+                    <span class="project-domain {{ page.domain_slug }}">{{ page.domain }}</span>
+                {% endif %}
                 <span class="project-period">{{ page.period }}</span>
             </div>
             <h1 class="project-title">{{ page.title }}</h1>
             <p class="project-description">{{ page.description }}</p>
             
-            {% if page.github_url %}
+            {% if page.github_url and page.show_code_button != false %}
             <div class="project-links">
                 <a href="{{ page.github_url }}" target="_blank" class="btn btn-primary">
                     <i data-lucide="github"></i>
-                    View on GitHub
+                    View Code
                 </a>
             </div>
             {% endif %}
